--- a/PrintReport/shengxingReport.rdlc
+++ b/PrintReport/shengxingReport.rdlc
@@ -89,7 +89,7 @@
               </TablixColumns>
               <TablixRows>
                 <TablixRow>
-                  <Height>3.65062cm</Height>
+                  <Height>3.40882cm</Height>
                   <TablixCells>
                     <TablixCell>
                       <CellContents>
@@ -382,7 +382,6 @@
                                             <rd:DefaultName>Textbox51</rd:DefaultName>
                                             <Style>
                                               <Border>
-                                                <Color>LightGrey</Color>
                                                 <Style>Solid</Style>
                                               </Border>
                                               <PaddingLeft>2pt</PaddingLeft>
@@ -416,7 +415,6 @@
                                             <rd:DefaultName>Textbox63</rd:DefaultName>
                                             <Style>
                                               <Border>
-                                                <Color>LightGrey</Color>
                                                 <Style>Solid</Style>
                                               </Border>
                                               <PaddingLeft>2pt</PaddingLeft>
@@ -450,7 +448,6 @@
                                             <rd:DefaultName>Textbox65</rd:DefaultName>
                                             <Style>
                                               <Border>
-                                                <Color>LightGrey</Color>
                                                 <Style>Solid</Style>
                                               </Border>
                                               <PaddingLeft>2pt</PaddingLeft>
@@ -484,7 +481,6 @@
                                             <rd:DefaultName>Textbox67</rd:DefaultName>
                                             <Style>
                                               <Border>
-                                                <Color>LightGrey</Color>
                                                 <Style>Solid</Style>
                                               </Border>
                                               <PaddingLeft>2pt</PaddingLeft>
@@ -518,7 +514,6 @@
                                             <rd:DefaultName>Textbox69</rd:DefaultName>
                                             <Style>
                                               <Border>
-                                                <Color>LightGrey</Color>
                                                 <Style>Solid</Style>
                                               </Border>
                                               <PaddingLeft>2pt</PaddingLeft>
@@ -532,6 +527,7 @@
                                       <TablixCell>
                                         <CellContents>
                                           <Textbox Name="Textbox71">
+                                            <CanGrow>true</CanGrow>
                                             <KeepTogether>true</KeepTogether>
                                             <Paragraphs>
                                               <Paragraph>
@@ -551,7 +547,6 @@
                                             <rd:DefaultName>Textbox71</rd:DefaultName>
                                             <Style>
                                               <Border>
-                                                <Color>LightGrey</Color>
                                                 <Style>Solid</Style>
                                               </Border>
                                               <PaddingLeft>2pt</PaddingLeft>
@@ -1028,9 +1023,8 @@
                                 </TablixMembers>
                               </TablixRowHierarchy>
                               <DataSetName>DataTableZhCN</DataSetName>
-                              <Left>0cm</Left>
                               <Height>1.25292cm</Height>
-                              <Width>21.04256cm</Width>
+                              <Width>21.04257cm</Width>
                               <Style>
                                 <Border>
                                   <Style>Solid</Style>
@@ -1159,7 +1153,6 @@
                               </Style>
                             </Textbox>
                             <Textbox Name="Textbox116">
-                              <CanGrow>true</CanGrow>
                               <KeepTogether>true</KeepTogether>
                               <Paragraphs>
                                 <Paragraph>
@@ -1176,9 +1169,8 @@
                               </Paragraphs>
                               <rd:DefaultName>Textbox116</rd:DefaultName>
                               <Top>2.27653cm</Top>
-                              <Left>0.07148cm</Left>
                               <Height>0.54708cm</Height>
-                              <Width>3.47331cm</Width>
+                              <Width>3.07891cm</Width>
                               <ZIndex>4</ZIndex>
                               <Style>
                                 <Border>
@@ -1191,7 +1183,6 @@
                               </Style>
                             </Textbox>
                             <Textbox Name="Textbox115">
-                              <CanGrow>true</CanGrow>
                               <KeepTogether>true</KeepTogether>
                               <Paragraphs>
                                 <Paragraph>
@@ -1223,7 +1214,6 @@
                               </Style>
                             </Textbox>
                             <Textbox Name="Textbox117">
-                              <CanGrow>true</CanGrow>
                               <KeepTogether>true</KeepTogether>
                               <Paragraphs>
                                 <Paragraph>
@@ -1240,9 +1230,9 @@
                               </Paragraphs>
                               <rd:DefaultName>Textbox116</rd:DefaultName>
                               <Top>2.27938cm</Top>
-                              <Left>3.54479cm</Left>
+                              <Left>3.07891cm</Left>
                               <Height>0.54708cm</Height>
-                              <Width>3.31296cm</Width>
+                              <Width>3.77884cm</Width>
                               <ZIndex>6</ZIndex>
                               <Style>
                                 <Border>
@@ -1255,7 +1245,6 @@
                               </Style>
                             </Textbox>
                             <Textbox Name="Textbox118">
-                              <CanGrow>true</CanGrow>
                               <KeepTogether>true</KeepTogether>
                               <Paragraphs>
                                 <Paragraph>
@@ -1288,7 +1277,6 @@
                               </Style>
                             </Textbox>
                             <Textbox Name="Textbox119">
-                              <CanGrow>true</CanGrow>
                               <KeepTogether>true</KeepTogether>
                               <Paragraphs>
                                 <Paragraph>
@@ -1321,7 +1309,6 @@
                               </Style>
                             </Textbox>
                             <Textbox Name="Textbox120">
-                              <CanGrow>true</CanGrow>
                               <KeepTogether>true</KeepTogether>
                               <Paragraphs>
                                 <Paragraph>
@@ -1353,7 +1340,6 @@
                               </Style>
                             </Textbox>
                             <Textbox Name="Textbox121">
-                              <CanGrow>true</CanGrow>
                               <KeepTogether>true</KeepTogether>
                               <Paragraphs>
                                 <Paragraph>
@@ -1385,7 +1371,6 @@
                               </Style>
                             </Textbox>
                             <Textbox Name="Textbox122">
-                              <CanGrow>true</CanGrow>
                               <KeepTogether>true</KeepTogether>
                               <Paragraphs>
                                 <Paragraph>
@@ -1397,9 +1382,7 @@
                                       </Style>
                                     </TextRun>
                                   </TextRuns>
-                                  <Style>
-                                    <TextAlign>Left</TextAlign>
-                                  </Style>
+                                  <Style />
                                 </Paragraph>
                               </Paragraphs>
                               <rd:DefaultName>Textbox116</rd:DefaultName>
@@ -1412,7 +1395,6 @@
                                 <Border>
                                   <Style>None</Style>
                                 </Border>
-                                <VerticalAlign>Middle</VerticalAlign>
                                 <PaddingLeft>2pt</PaddingLeft>
                                 <PaddingRight>2pt</PaddingRight>
                                 <PaddingTop>2pt</PaddingTop>
@@ -1420,7 +1402,6 @@
                               </Style>
                             </Textbox>
                             <Textbox Name="Textbox123">
-                              <CanGrow>true</CanGrow>
                               <KeepTogether>true</KeepTogether>
                               <Paragraphs>
                                 <Paragraph>
@@ -1452,13 +1433,12 @@
                               </Style>
                             </Textbox>
                             <Textbox Name="Textbox124">
-                              <CanGrow>true</CanGrow>
                               <KeepTogether>true</KeepTogether>
                               <Paragraphs>
                                 <Paragraph>
                                   <TextRuns>
                                     <TextRun>
-                                      <Value>=Parameters!ReportParameterDelivery.Value</Value>
+                                      <Value>=Parameters!ReportParameterVerification.Value</Value>
                                       <Style>
                                         <FontFamily>宋体</FontFamily>
                                       </Style>
@@ -1484,7 +1464,6 @@
                               </Style>
                             </Textbox>
                             <Textbox Name="Textbox125">
-                              <CanGrow>true</CanGrow>
                               <KeepTogether>true</KeepTogether>
                               <Paragraphs>
                                 <Paragraph>
@@ -1516,7 +1495,6 @@
                               </Style>
                             </Textbox>
                             <Textbox Name="Textbox126">
-                              <CanGrow>true</CanGrow>
                               <KeepTogether>true</KeepTogether>
                               <Paragraphs>
                                 <Paragraph>
@@ -1566,14 +1544,14 @@
                               <rd:DefaultName>Textbox116</rd:DefaultName>
                               <Top>2.86174cm</Top>
                               <Left>12.42094cm</Left>
-                              <Height>0.54708cm</Height>
+                              <Height>0.50895cm</Height>
                               <Width>8.62162cm</Width>
                               <ZIndex>16</ZIndex>
                               <Style>
                                 <Border>
                                   <Style>None</Style>
                                 </Border>
-                                <VerticalAlign>Middle</VerticalAlign>
+                                <VerticalAlign>Top</VerticalAlign>
                                 <PaddingLeft>2pt</PaddingLeft>
                                 <PaddingRight>2pt</PaddingRight>
                                 <PaddingTop>2pt</PaddingTop>
@@ -1616,7 +1594,7 @@
             <DataSetName>DataTableZhCN</DataSetName>
             <Top>0.07938cm</Top>
             <Left>0.25167cm</Left>
-            <Height>3.65062cm</Height>
+            <Height>3.40882cm</Height>
             <Width>21.36006cm</Width>
             <Style>
               <Border>
@@ -1625,13 +1603,13 @@
             </Style>
           </Tablix>
         </ReportItems>
-        <Height>1.46851in</Height>
+        <Height>1.37331in</Height>
         <Style />
       </Body>
       <Width>8.64051in</Width>
       <Page>
         <PageHeader>
-          <Height>1.29674cm</Height>
+          <Height>1.24671cm</Height>
           <PrintOnFirstPage>true</PrintOnFirstPage>
           <PrintOnLastPage>true</PrintOnLastPage>
           <ReportItems>
@@ -1686,9 +1664,9 @@
               </Paragraphs>
               <rd:DefaultName>Textbox114</rd:DefaultName>
               <Top>0.74083cm</Top>
-              <Left>0.32315cm</Left>
+              <Left>0.28787cm</Left>
               <Height>0.50588cm</Height>
-              <Width>7.20782cm</Width>
+              <Width>7.2431cm</Width>
               <ZIndex>1</ZIndex>
               <Style>
                 <Border>
@@ -1717,8 +1695,8 @@
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>Textbox114</rd:DefaultName>
-              <Top>0.79086cm</Top>
-              <Left>7.53097cm</Left>
+              <Top>0.74083cm</Top>
+              <Left>7.56625cm</Left>
               <Height>0.50588cm</Height>
               <Width>4.04519cm</Width>
               <ZIndex>2</ZIndex>
@@ -1749,10 +1727,10 @@
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>Textbox114</rd:DefaultName>
-              <Top>0.78493cm</Top>
-              <Left>11.57616cm</Left>
+              <Top>0.74083cm</Top>
+              <Left>11.64672cm</Left>
               <Height>0.50588cm</Height>
-              <Width>5.13257cm</Width>
+              <Width>5.09729cm</Width>
               <ZIndex>3</ZIndex>
               <Style>
                 <Border>
@@ -1781,10 +1759,10 @@
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>Textbox116</rd:DefaultName>
-              <Top>0.77612cm</Top>
-              <Left>18.69149cm</Left>
-              <Height>0.52062cm</Height>
-              <Width>2.92024cm</Width>
+              <Top>0.74083cm</Top>
+              <Left>18.65621cm</Left>
+              <Height>0.50588cm</Height>
+              <Width>2.95552cm</Width>
               <ZIndex>4</ZIndex>
               <Style>
                 <Border>
@@ -1813,10 +1791,10 @@
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>Textbox5</rd:DefaultName>
-              <Top>0.79086cm</Top>
+              <Top>0.74083cm</Top>
               <Left>16.74401cm</Left>
               <Height>0.50588cm</Height>
-              <Width>1.94748cm</Width>
+              <Width>1.9122cm</Width>
               <ZIndex>5</ZIndex>
               <Style>
                 <Border>
@@ -1836,12 +1814,11 @@
           </Style>
         </PageHeader>
         <PageFooter>
-          <Height>0.92604cm</Height>
+          <Height>1.27cm</Height>
           <PrintOnFirstPage>true</PrintOnFirstPage>
           <PrintOnLastPage>true</PrintOnLastPage>
           <ReportItems>
             <Textbox Name="Textbox4">
-              <CanGrow>true</CanGrow>
               <KeepTogether>true</KeepTogether>
               <Paragraphs>
                 <Paragraph>
@@ -1866,6 +1843,7 @@
                 <Border>
                   <Style>None</Style>
                 </Border>
+                <VerticalAlign>Top</VerticalAlign>
                 <PaddingLeft>2pt</PaddingLeft>
                 <PaddingRight>2pt</PaddingRight>
                 <PaddingTop>2pt</PaddingTop>
